--- a/view/css/mainstyle.css
+++ b/view/css/mainstyle.css
@@ -16,6 +16,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 20px; /* Thêm padding để giãn cách bên trái và phải */
 }
 
 .logo a {
@@ -30,7 +31,7 @@ body {
 
 nav {
     display: flex;
-    gap: 20px;
+    gap: 30px;  /* Tăng khoảng cách giữa các mục trong menu */
 }
 
 nav a {
@@ -42,6 +43,7 @@ nav a {
 nav a:hover {
     color: #aaa;
 }
+
 
 .search-bar {
     display: flex;
