--- a/admin/style.css
+++ b/admin/style.css
@@ -173,13 +173,39 @@ header h1 {
     background-color: #000000;
 }
 
-/* product */
-.admin-content-right-product-add  {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #f8f9fa;
-    padding: 20px;
+/*-- product --*/
+.admin-content-right-product-add h1{
+margin-top: 20px;
+}
+
+.admin-content-right-product-add input,select{
+    width: 200px; /* Chiếm toàn chiều rộng */
+    height: 30px;
+    display: block; /* Chuyển khóa lớp inline-block */
+    margin: 6px 0 12px; /* Khoảng cách dưới */
+    padding-left: 12px; /* Khoảng cách trái */
+} 
+
+.admin-content-right-product-add input textarea{ 
+    display: block; 
+    height: 200px; 
+    width: 500px;
+    margin-bottom: 12px;
+    padding: 12px;
+}
+.admin-content-right-product-add button{
+    display: block;
+    margin-top: 10px;
+    height: 30px;
+    width: 100px;
+    cursor: pointer;
+    background-color: brown;
+    border: none;
+    color: white;
+    transition: all 0.3s ease;
+}
+.admin-content-right-product-add button:hover{
+    background-color:  transparent;
+    border: 1px solid brown;
+    color: brown;
 }
